--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,8 @@
   dropdown:
     - name: Program Details
       link: /program-detail/
+- name: Sponsors
+  link: /sponsors/
 - name: Access
   link: /access/
 - name: Facebook
