--- a/_data/onic_footer_menu.yml
+++ b/_data/onic_footer_menu.yml
@@ -1,7 +1,7 @@
 - name: Home
   link: /
-- name: News
-  link: /news/
+#- name: News
+#  link: /news/
 - name: Program
   link: /program/
 - name: Sponsors
