--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -1,374 +1,46 @@
-- date: 藤原洋記念ホール
+- date: September, 18th
   sessions:
-    - title: 開会の挨拶
-      time: 9:20-9:30
-      presenters:
-        - name_and_title: |-
-            ONIC Japan2016 実行委員会 委員長<br />
-            浅羽 登志也 (株式会社IIJイノベーションインスティテュート)
 
-    - title: Open Networking に対するNTTコミュニケーションズの挑戦
-      time: 10:00-10:30
-      type: 講演
-      tag: s_01
+    - title:
+      time:
+      type:
+      tag:
       presenters:
         - name_and_title: |-
-            NTTコミュニケーションズ株式会社<br>
-            山下 達也
+
           photo: 
       abstract: |-
-        NTTコミュニケーションズは事業ビジョンとして、「Transform. Transcend.」と称し、 
-        お客さまのビジネスや社会、そして市場に飛躍的進化（Transform）とダイナミック な
-        変革（Transform）をもたらし、期待や想像を超える（Transcend）新たな価値や、 
-        すべての垣根を越えて（Transcend）つながる世界を創造するため、時代を先駆ける 技術や
-        サービスを提供することを目指しています。
-        この事業ビジョン実現に向けた時代を先駆ける技術の一つとして、OpenNetworking の技術開発を
-        積極的に行っております。<br/>本講演では、NTTコミュニケーションズにおけるOpenNetworkingの
-        取組みとして、 OSSを活用した技術開発動向や人材育成についてお話しします。
+
       slides:
-        - file: keynote.pdf
-
-    - title: テレコムネットワークの仮想化：ETSI NFVからOPNFVまで
-      time: 10:00-10:30
-      type: 講演
-      tag: s_02
-      presenters:
-        - name_and_title: |-
-            株式会社NTTドコモ 先進技術研究所<br />
-            Khan Ashiq
-          photo: 
-      abstract: |-
-        NFVはネットワーク仮想化に基づいたテレコムネットワークの実装とオペレー ション技術を指す。<br>
-        ETSI ISG NFVは管理機構のMANO を含め、その国際標準仕様を規定している。<br>
-        ETSI NFV仕様の普及により、その実装の試みとしてOPNFVというオープンソースコミュニティも立ち
-        上がった。OPNFVは仮想化テレコムネットワークを支える仮想化ネットワークプラットフォームを
-        オープンソースソフトウェアで構築することを目的に、既に3つのリリースを公開した。本講演ではNFV
-        がこれまでに歩んできた仮想化技術のコンセプトの具現化からその商用導入までのプロセスを紹介する。
-  
-    - title: 休憩
-      time: 10:30-11:00
-
-    - title: 制御系ネットワークの技術動向とセキュリティ対策
-      time: 11:00-11:30
-      type: 講演
-      tag: s_03
-      presenters:
-        - name_and_title: |-
-            技術研究組合制御システムセキュリティセンター(CSSC)<br>
-            細川 嵩
-          photo: 
-      abstract: |-
-        制御システムは工場や発電所、ビルなどをはじめとしてさまざまな所で稼働している。
-        近年ではIPやEthernetなどの汎用技術も取り入れた制御系ネットワークを構築することにより、
-        きめ細やかなサービスの提供や制御システムの低コスト化を実現している。しかしながら汎用
-        技術を取り入れることにより、Stuxnetをはじめとする制御システムへのサイバー攻撃が発生
-        してきている。<br>
-        本公演では、制御システムの特徴に合わせたセキュリティ対策例や制御システムセキュリティ
-        センターの研究成果などについて紹介する。
-
-    - title: Open Daylightで「Open SDN Continuum」 を創造<br>Creating “Open SDN Continuum” With OpenDaylight
-      time: 11:30-12:00
-      type: 講演
-      tag: s_04
-      presenters:
-        - name_and_title: |-
-            Fujitsu Network Communications, Inc. <br>
-            Igor Bergman
-          photo: 
-      abstract: |-
-        新しいスタイルの競合が従来のサービスプロバイダと企業向けサービスデリバリーに挑戦している。
-        従来の音声・データネットワークでは、画像配信、ライブスポーツ、マルチプレーヤオンライン
-        ゲームを端末依存せず時には同時に複数端末を使うといった顧客ニーズを満たすのが困難になっている。<br>
-        プロバイダは、「オープン」コンセプトをテクノロジースタックに取り込むことを含め、ビジネスモデルを
-        根本から変えることに取り組んでいる。　その中でも61％のプロバイダはOpenDaylight採用を選択。<br>
-        その理由は、多くのネットワークアプリとユースケースに支えられ、柔軟かつプログラマブルなオープン
-        ソースプラットフォームであるから。<br>
-        グローバルなお客様をお手伝いすることで、富士通はOpen Daylightのパートナ一員として、経験豊富なコミュ
-        ニティから、ユーザと開発者とのコラボレーションによる900に上るコントリビューション並びに10万コード
-        コミットの恩恵を受けられています。<br>
-        本セッションでは、Fujitsu Network Communications, IncのIgor Bergmanが、「オープンコンティ
-        ニュアム」について、如何にオープンソフトとハードが最もパワフルで信頼性の高い次世代ネットワークを
-        支えていくかについて話します。<br>
-        <br>
-        New categories of competitors are challenging the traditional model of service provider and enterprise service delivery. Legacy voice and data networks struggle to meet the needs of consumers who expect to stream studio movies, live sports, and multiplayer online gaming from any device they happen to be using- sometimes concurrently.<br>
-        Providers are fundamentally changing their business models, including the introduction of “open” concepts to their entire technology stack, and 61%* of them choose OpenDaylight. Using power of flexible and programmable Open Source platform that is underpinning a wide breadth of networking applications and use cases.<br>
-        Helping our Global customers, Fujitsu is partnering with OpenDaylight to successfully draw on rich community, and collaboration of developers and user’s with almost 900 contributions and 100,000 code commits.<br>
-        In this session, Igor Bergman from Fujitsu Network Communications, will discuss the “open continuum” and how open software and hardware is the foundation of the next generation of the world’s most powerful and reliable networks.<br>
-        <br>
-        ※このプログラムは英語での講演となります。
-
-    - title: お昼休憩
-      time: 12:00-13:10
-
-    - title: IT市場の変遷とSDN
-      time: 13:10-13:40
-      type: 講演
-      tag: s_05
-      presenters:
-        - name_and_title: |-
-            株式会社野村総合研究所<br>
-            木下 貴史
-          photo: 
-      abstract: |-
-        SDNという言葉が単体で語られることはかつてより少なくなったが、
-        そのコンセプトは新しいIT市場において急速な広がりをみせている。<br>
-        一方で、IoTのようにスケーラブルで低価格、かつ柔軟な基盤の必要性を
-        感じている非IT部門の ユーザ達のニーズを、SDNを始めとする仮想化技術が
-        支えているとの側面もある。<br>
-        そのような環境の中におけるSDN市場について考える。
-
-    - title: GoBGP – BGP daemon in the Open Networking Era
-      time: 13:40-14:10
-      type: 講演
-      tag: s_06
-      presenters:
-        - name_and_title: |-
-            NTTソフトウエアイノベーションセンタ<br>
-            石田 渉
-          photo: 
-      abstract: |-
-        本講演ではNTTソフトウェアイノベーションセンタ発のオープンソースBGP
-        実装である、GoBGPを紹介します。<br>
-        BGPはインターネットを支えるプロトコルとして世界中で利用されていますが、
-        近年大規模データセンタ内のルーティングにも利用され、その利用用途はさらに広
-        がっています。<br>
-        Open Networkingな世界では、従来の垂直統合型のTurnkeyソリューション
-        ではなく、様々なコンポーネントと連携しやすいソフトウェアスタックが求められて
-        います。<br>
-        BGP実装も利用用途が広がるにつれ、同様のニーズが高まっており、 そのようなニーズ
-        を満たすためNTTソフトウェアイノベーションセンタではGoBGPの開 発に取り組んでいます。
-      slides:
-        - file: f06.pdf
-
-    - title: Zebra 2.0 – SDN, NFV, Container時代のNetworking Softwareの設計と実装
-      time: 14:10-14:40
-      type: 講演
-      tag: s_07
-      presenters:
-        - name_and_title: |-
-            Hash-set<br>
-            石黒 邦宏
-          photo: 
-      abstract: |-
-        SDN, NFV, Containerなど、これまで存在していなかったネットワーキング環境が
-        広がっていく中、スケーラビリティや、APIへの対応など様々な対応が Networking 
-        Softwareに求められている。現在広く使われているOpen Source Networking 
-        SoftwareであるQuaggaのアーキテクチャの設計を根本から見直し、 これからの
-        ネットワーキング環境に対応した新たなNetworking Softwareであ るZebra 2.0の
-        実装を進めている。その設計と実装について解説します。
-
-    - title: 休憩
-      time: 14:40-15:10
-
-    - title: SD-WANパネル
-      time: 15:10-16:40
-      type: パネルディスカッション
-      tag: s_08
-      presenters:
-        - name_and_title: ○モデレーター<br>
-            NTT未来ねっと研究所<br> 中島 佳宏<br>
-        - name_and_title: ○パネラー<br>
-            - Viptela<br>　進藤 資訓<br>
-            - シスコシステムズ合同会社<br>　鈴木 昌彦<br>
-            - ジュニパーネットワークス株式会社<br>　有村 淳矢<br>
-            - 古河電気工業株式会社<br>　碓井 悟<br>
-            - ネットワンシステムズ株式会社<br>　井上 直也<br>
-            - ブロケード コミュニケーションズ システムズ株式会社<br>　尾方 一成<br>
-            - ノキアソリューションズ&ネットワークス株式会社<br>　鹿志村 康生<br>
-          photo: 
-      abstract: |-
-        Software-Defined WAN (SDWAN) は、企業ネットワークなどを対象にシンプル
-        かつ高いコントロール性、高い柔軟性と拡張性、コスト削減を可能にさせるアプローチ
-        として注目されている技術です。<br>
-        この注目されているSDWANについて、有識者を一堂に集め、対象、技術、マイグレー
-        ションな側面から深掘りしていきます。
-      slides:
-        - file: f08.pdf
-        - file: f08_2.pdf
-        - file: f08_3.pdf
-        - file: f08_4.pdf
-        - file: f08_5.pdf
-        - file: f08_6.pdf
-        - file: f08_7.pdf
-
-    - title: 技術の適材適所でつくるSDN/NFV@ShowNet 2016
-      time: 17:10-17:40
-      type: 講演
-      tag: s_09
-      presenters:
-        - name_and_title: |-
-            Interop 2016 ShowNet NOCメンバー<br>
-            中村 遼
-          photo: 
-      abstract: |-
-        毎年6月に開催されるInterop Tokyoでは、世界最大のデモンストレーションネッ トワークであるShowNetの構築を行っています。ShowNetでは、2012年から、実 トラフィックの流れるライブネットワークへのSDNの適用に継続してチャレンジ してきました。2016年は、バックボーンネットワークとNFVの融合を目指して、 より柔軟にトラフィックを制御できるネットワークを構築しました。また、 NFVの要であるNetwork Functionの進化、高速なソフトウェアパケット転送技術 を用いたVNFのデモンストレーションを実施しました。本発表では、ShowNetに おいて構築されたNFVについて、バックボーンの設計からソフトウェアパケット 転送技術、さらにはFPGAの利用まで、その詳細にわたってお話しいたします。
-      slides:
-        - file: f09.pdf
-
-    - title: サイバーエージェントにおけるOpen Networkingへの取り組み
-      time: 16:45-17:15
-      type: 講演
-      tag: s_10
-      presenters:
-        - name_and_title: |-
-            株式会社サイバーエージェント<br>
-            山本 孔明
-      abstract: |-
-        サイバーエージェントのアドテク本部ではオープンソースの活用が進んでおり、サーバーだけではなくネットワークの分野においてもオープンソースを積極的に採用しています。本セッションではネットワークとオープンをキーワードにサイバーエージェントアドテク本部の取り組みを紹介します。
-      slides:
-        - file: f10.pdf
-
-    - title: CORD(Central Office Re-architected as a Datacenter) とONOSアップデート
-      time: 18:10-18:40
-      type: 講演
-      tag: s_10
-      presenters:
-        - name_and_title: |-
-            日本電気株式会社<br>
-            金海 好彦
-      abstract: |-
-        ONOS プロジェクト内では、様々なユースケースの実装があります。このユースケース
-        の1つであるCORD (Central Office Re-architected as a Data center) が、
-        2016年5月に別プロジェクトとして独立しました。本講演では、CORDプロジェクトが
-        独立するまでの経緯と、CORDが解決を目指している課題とその効果についてご紹介いたします。<br>
-        また、ONOSの最新状況についても併せてお話しいたします。
-      slides:
-        - file: f11.pdf
-
-    - title: 閉会の挨拶
-      time: 18:40-
-      presenters:
-        - name_and_title: |-
-            ONIC実行委員会<br />
+        - file: 
 
 
-- date: 多目的教室2
+- date: September, 19th
   sessions:
-    - title: ファーウェイのエンタープライズ・ソリューション、CloudVPN/SD-WANを中心としたご紹介
-      time: 10:30-11:00
-      type: 講演
-      tag: s_01
+    - title: 
+      time: 
+      type: 
+      tag: 
       presenters:
         - name_and_title: |-
-            華為技術日本株式会社<br>
-            迫田 健
-            
+
           photo: 
       abstract: |-
-        ファーウェイのNFV/SDNを中心とした最新のポートフォリオをご紹介するとともに、 Cloud VPN/SD-WANなどSMEをターゲットとした新しいソリューションについてその取り組みの状況をご紹介します。
+
       slides:
-        - file: NTTpc.pdf
+        - file: 
 
-    - title: SD-WAN / SD-DCの垣根を無くすEnd-to-End SDN
-      time: 12:00-12:30
-      type: ランチセミナー
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            NOKIA　(Nuage Networks)<br>
-            安村 裕太
-          photo: 
-      abstract: |-
-        NOKIAのNuage Networkでは、統一されたSDNコントローラからSD-WAN / SD-DCのシームレスな接続性をご提供し、Underlay/Overlayを統合的に可視化可能なプラットフォームをご紹介致します。<br>
-        Nuage VSPは、SDN検討で課題視されてきたマルチテナント環境における共有資源アクセス、既存ネットワーク接続、 ハイブリッドクラウド接続、DRなどを解決するための多様な接続手段をご提供可能なプラットフォームとなっております。
-      slides:
-        - file: NTTpc.pdf
-
-    - title: オープンソースで実現するクラウドネイティブな世界
-      time: 14:40-15:10
-      type: 講演
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            日本電気株式会社<br>
-            鳥居 隆史
-          photo: 
-      abstract: |-
-        世の中にはクラウドと名前の付くシステムやソリューションが多くありますが、 それらを使うだけでは、クラウドの利点を享受できるわけではありません。<br>
-        クラウドを活用し、クラウドネイティブに仕組みを変えていくことが大切です。<br>
-        アプリケーションをクラウドネイティブ化するというだけではなく、システムと組織まで含めた仕組みを再構成していく必要があります。オープンソースは そのための道具として有効です。本セッションではオープンソースの最新トレンドから、クラウドネイティブへの取り組みを解説します。
-      slides:
-        - file: NTTpc.pdf
-
-    - title: Dell EMCのNFV & Open Networking ソリューションのご採用事例について:ベライゾン様ご登壇!
-      time: 14:40-15:10
-      type: 講演
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            デル株式会社<br>
-            杉本 直之<br>
-            ベライゾンジャパン合同会社<br>
-            生田 隆由
-          photo: 
-      abstract: |-
-        本講演では、ネットワークのオープン化を目指すDell EMCのNFV & Open Networking ソリューションについてのご紹介に加え、ベライゾンジャパン様にもご登壇頂き、2016年4月に米国ベライゾン様が発表された世界最大のNFV導入事例について、同システムの概要と同システムを使用した新サービスの内容を含めてお話し頂く予定です。<br>
-        ネットワーク機器のオープン化に関心のあるお客様は必見のセッションです。
-      slides:
-        - file: NTTpc.pdf
-
-
-- date: 多目的教室3
+- date: September, 20th
   sessions:
-    - title: SDNソリューション　Contrail アップデート
-      time: 10:30-11:00
-      type: 講演
-      tag: s_01
+    - title: 
+      time: 
+      type: 
+      tag: 
       presenters:
         - name_and_title: |-
-            ジュニパーネットワークス株式会社<br>
-            中嶋 大輔
-            
-          photo: 
-      abstract: |-
-        「ジュニパーネットワークスが提供するSDNソリューション”Contrail”の最新情報をご紹介します。さらに使いやすくなったService chainingとAnalytics機能、パケット転送性能の向上、また、Openstack環境と既存環境との接続方法をご紹介します。」
-      slides:
-        - file: NTTpc.pdf
 
-    - title: シスコ データセンター向けSDN技術とアプリケーションの可視化/分析
-      time: 12:40-13:10
-      type: 講演
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            シスコシステムズ合同会社<br>
-            大平 伸一
           photo: 
       abstract: |-
-        シスコは2014年夏にCisco ACI (Application Centric Infrastracture)を発表し、データセンターにおけるSDNに対して具体的なソリューションをいち早く提示して参りました。<br>
-        本セミナーでは、Cisco ACI/APICによるネットワークの自動化、迅速化および物理ネットワークと仮想ネットワークの集中管理、FW/IPSやLBの集中制御などについてご紹介します。<br>
-        更に、ACIネットワーク上を流れるパケットやフロー情報を全て収集/リアルタイム分析を行い、データセンター全体のアプリケーションの可視化とゼロトラストモデルの運用を可能とするCisco Tetration Analyticsについてご紹介します。
-      slides:
-        - file: NTTpc.pdf
 
-    - title: 企業WANを変えるSD-WANの正体とは
-      time: 14:40-15:10
-      type: 講演
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            NTTコミュニケーションズ株式会社<br>
-            沈 文裕
-          photo: 
-      abstract: |-
-        クラウドの利用が進み、WANのトラフィック増大、複雑な運用管理が課題になってきました。<br>
-        そこで、アプリケーションごとのトラフィック制御やコントローラーによる集中管理を実現するSD-WANが注目されています。<br>
-        本セミナーでは、SD-WANの概要や利用シーン、弊社テストベッドでの最新テスト結果についてご紹介します。
       slides:
-        - file: NTTpc.pdf
-
-    - title: NFV/SDN時代のネットワーク運用ライフサイクルの自動化へのアプローチ
-      time: 16:40-17:10
-      type: 講演
-      tag: s_01
-      presenters:
-        - name_and_title: |-
-            富士通株式会社<br>
-            室町 和輝
-          photo: 
-      abstract: |-
-        NFVに代表される仮想化技術の活用により、これまでできなかったネットワークの運用における柔軟性を実現することができるようになりました。一方で、NFV基盤や仮想ネットワークの操作、細やかなセキュリティ設定など新たな運用操作も増えていきます。<br>
-        そのため、運用保守部門は新たなスキル習得やこれまで以上の稼動が必要となり、負担が大きくなることが予想されます。<br>
-        本セミナーでは、保守稼動を軽減するなど富士通が考えるネットワーク運用ライフサイクルの自動化に向けたアプローチをご紹介します。
-      slides:
-        - file: NTTpc.pdf
+        - file: 
