change name of photo

--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -6,7 +6,7 @@
       logo: arista.jpg
     - name: 伊藤忠テクノソリューションズ株式会社
       profile: http://www.ctc-g.co.jp/
-      logo: ctc.jpg
+      logo: CTC.jpg
     - name: ミドクラジャパン株式会社
       profile: http://www.midokura.jp/
       logo: midokura.jpg
@@ -36,7 +36,7 @@
       logo: nec-2013.jpg
     - name: シトリックス・システムズ・ジャパン株式会社
       profile: https://www.citrix.com/
-      logo: citrix.jpg
+      logo: Citrix.jpg
     - name: ヴイエムウェア株式会社
       profile: http://www.vmware.com/jp/
       logo: VMW.jpg
@@ -63,7 +63,7 @@
       logo: no.jpg
     - name: NTTコミュニケーションズ株式会社
       profile: http://www.ntt.com/
-      logo: NTT_Com.jpg
+      logo: NTT_com.jpg
     - name: NTTコムウェア株式会社
       profile: http://www.nttcom.co.jp/
       logo: NTT_cw.jpg
