programs and sponsors updated.

--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -7,6 +7,12 @@
     - name: シスコシステムズ合同会社
       profile: https://www.cisco.com/c/ja_jp/index.html
       logo: ONIC_Cisco.png
+    - name: NTTコミュニケーションズ株式会社
+      profile: https://www.ntt.com/index.html
+      logo: NTTcom.png
     - name: 富士通株式会社
       profile: https://www.cisco.com/c/ja_jp/index.html
       logo: Fujitsu.png
+    - name: APRESIA Systems株式会社
+      profile: https://www.apresia.jp/
+      logo: apresia-systems.png        
