presenter's photo added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -33,7 +33,7 @@
         - name_and_title: |-
             早稲田大学<br />
             斉藤 賢爾
-          photo: placeholder-120x140.png
+          photo: Kenji-Saito.jpg
       abstract: |-
         Web3という言葉がいまだに巷を賑わせています。Web 3.0を
         語源とするこの言葉は、「World Wide Webを応用したビジ
@@ -55,7 +55,7 @@
         - name_and_title: |-
             トヨタ自動車株式会社<br />
             阿部 博
-          photo: placeholder-120x140.png
+          photo: Hiroshi-Abe.jpg
       abstract: |-
         コネクティッドカーの普及と通信の多様化に伴い、コネク
         ティッドカー1台あたりのデータ通信量は、2019年時点で
@@ -82,7 +82,7 @@
         - name_and_title: |-
             株式会社インターネットイニシアティブ<br />
             谷脇 康彦
-          photo: placeholder-120x140.png
+          photo: Yasu-Taniwaki.jpg
       abstract: |-
         データが社会経済の中心になる中、プラットフォーマーの市
         場支配力の濫用、分散型事業モデルの可能性、デジタル冷戦
@@ -104,7 +104,7 @@
         - name_and_title: |-
             NTTコミュニケーションズ<br />
             水口 孝則
-          photo: placeholder-120x140.png
+          photo: Taka-Mizu.jpg
       abstract: |-
         2020年　NTTコミュニケーションズは、会社発足依頼最大の不
         正アクセスが発覚し、侵入分析、影響度分析、対処確認をデー
@@ -135,7 +135,7 @@
             NTTコミュニケーションズ / <br />
             Interop Tokyo 2023 ShowNet NOCチームメンバー<br />
             上野 幸杜
-          photo: placeholder-120x140.png
+          photo: Yukito-Ueno.jpg
       abstract: |-
         ShowNetとは、インターネットテクノロジーイベント”Interop 
         Tokyo”において構築される、世界最大のデモンストレーション
