programs and sponsors updated with file properly added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -74,6 +74,8 @@
         が多いグリーンエネルギーを 積極的に活用すべく、エッジ
         処理と組み合わせたグリーンモビリティを効率的に実現する
         試みについて述べる。
+    - title: 休憩
+      time: "11:50-13:00"
     - title: データ駆動社会の実現に向けて
       time: "13:00-13:30"
       type: 講演
@@ -145,6 +147,10 @@
         にVPN化し、会場のトラフィックを収容しました。 本講演では、
         その設計、実運用を通して得た知見、そして課題について紹介
         します。
+    - title: 休憩
+      time: "17:15-17:30"
+    - title: AIとネットワークエンジニアのパネル
+      time: "17:30-18:30"             
     - title: 閉会の挨拶
       time: "18:30-"
       presenters:
