add Hibino-san's session.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -101,9 +101,23 @@
     - title: 調整中
       time: "13:30-14:00"
       type: スポンサーセッション
-    - title: 調整中
+    - title: DNSの進化と研究開発での取り組みについて
       time: "14:00-14:30"
       type: スポンサーセッション
+      tag: sp_3
+      presenters:
+        - name_and_title: |-
+            株式会社インターネットイニシアティブ<br />
+            日比野 啓
+          photo: Kei-Hibino.jpg
+      abstract: |-
+        DNS はインターネットで 30年以上利用され続けている仕組み
+        です。 旧来の仕組みがそのまま利用されている部分もありな
+        がら、 プライバシーに対する懸念やシステムに対する攻撃へ
+        の対応のために緩やかに進化しています。 DNSの旧来の機能と
+        進化した部分を簡単に説明しつつ、 その新たな機能について
+        も実験および検証を行ないやすくするための、 DNSライブラリ
+        やDNSフルリゾルバの研究開発実装について紹介します。
     - title: データ分析観点からみるインシデント対応
       time: "14:30-15:00"
       type: 講演
