BoF and panel session updated.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -6,20 +6,72 @@
     - title: 開会
       time: "17:55"
       type: BoF
-    - title: BoF1
+    - title: エッジからはじめる新しいユーザーフレンドリーなサービスデザイン手法
       time: "18:00"
-      type: BoF      
-    - title: BoF2
+      type: BoF
+      tag: b_01
+      presenters:
+        - name_and_title: |-
+            富士通株式会社<br />
+            鶴 恵美
+      abstract: |-
+        エッジサービスはセンサーをはじめとするデバイ
+        スとエッジクラウドやクラウドサービスといった
+        コンピューティングインフラをネットワークで繋
+        ぎ形成するサービスであり、多様な技術領域と多
+        数のコンポーネントで実現されます。このためサー
+        ビスの導入は複雑でハードルが高く、私たちはエッ
+        ジサービス導入を支援するオープンプラットフォー
+        ム開発に挑戦しています。開発関連技術の紹介と
+        今後の展望を議論します。
+    - title: 沖縄におけるエッジコンピューティング活用の可能性
       time: "18:30"
-      type: BoF      
+      type: BoF
+      tag: b_02
+      presenters:
+        - name_and_title: |-
+            一般社団法人 沖縄オープンラボラトリ<br />
+            照屋 保幸
+      abstract: |-
+        近年、ITシステムのクラウド集中が進む一方で、大
+        規模災害時の海底ケーブル損傷による利用障害の懸
+        念が増大しています。本セッションでは、そうした
+        問題を解決すべく、エッジコンピューティングとネッ
+        トワーク技術の進展に焦点を当て、その開発を通じ
+        て得られる知見や解決策について深く探ります。ま
+        た、沖縄の地域特性に適した、最適なICTインフラの
+        形についても議論を展開します。参加者の皆様と共
+        に、地域ニーズに応えるICTインフラ構築の道筋を明
+        らかにしていくことを目指します。
     - title: 休憩
       time: "19:00"
-    - title: BoF3
+    - title: クラウドネイティブな新しいOSSのネットワークコントローラ「Kuesta」の概要と実用化に向けた取り組み
       time: "19:30"
-      type: BoF      
-    - title: BoF4
+      type: BoF
+      tag: b_03
+      presenters:
+        - name_and_title: |-
+            NTTコミュニケーションズ株式会社<br />
+            坂井 立晟
+      abstract: |-
+        ONIC2022で紹介した「クラウドネイティブな新しい
+        ネットワークコントローラを作る」の成果物 
+        「Kuesta」を今年1月にOSS化した。本セッションで
+        はKuestaへのカンファレンスでのフィードバック、
+        実用化に向けた課題の整理、OSS化した後に行った追
+        加開発(デバイスドライバ部分のAnsible連携、Kuesta
+        が管理するデータとネットワークデバイスとの一貫
+        性担保機能等)で得た知見について紹介をする。
+    - title: (仮)ネットワーク屋がコンテナ力を手に入れる最中の話
       time: "20:00"
-      type: BoF      
+      type: BoF
+      tag: b_04
+      presenters:
+        - name_and_title: |-
+            日本電気株式会社<br />
+            金海 好彦
+      abstract: |-
+        調整中
     - title: 閉会
       time: "20:30"
 - date: November 10, 2023 (@メインホール)
@@ -111,12 +163,12 @@
             日比野 啓
           photo: Kei-Hibino.jpg
       abstract: |-
-        DNS はインターネットで 30年以上利用され続けている仕組み
-        です。 旧来の仕組みがそのまま利用されている部分もありな
-        がら、 プライバシーに対する懸念やシステムに対する攻撃へ
-        の対応のために緩やかに進化しています。 DNSの旧来の機能と
-        進化した部分を簡単に説明しつつ、 その新たな機能について
-        も実験および検証を行ないやすくするための、 DNSライブラリ
+        DNSはインターネットで 30年以上利用され続けている仕組み
+        です。旧来の仕組みがそのまま利用されている部分もありな
+        がら、プライバシーに対する懸念やシステムに対する攻撃へ
+        の対応のために緩やかに進化しています。DNSの旧来の機能と
+        進化した部分を簡単に説明しつつ、その新たな機能について
+        も実験および検証を行ないやすくするための、DNSライブラリ
         やDNSフルリゾルバの研究開発実装について紹介します。
     - title: データ分析観点からみるインシデント対応
       time: "14:30-15:00"
@@ -141,9 +193,25 @@
         - name_and_title: |-
             Cisco Systems<br />
             JP Vasseur
-    - title: 調整中
+    - title: コンテナ基盤を活用したIoTサービスとeSIMアプレット連携の取り組みについて
       time: "15:45-16:15"
       type: スポンサーセッション
+      tag: sp_4
+      presenters:
+        - name_and_title: |-
+            NTTコミュニケーションズ株式会社<br />
+            プラットフォームサービス本部　5G&IoT部<br />
+            角田 佳史<br />
+            村田 一成
+      abstract: |-
+        IoT Connect Gatewayはプロトコル変換機能を軸に
+        したクラウドアダプタ機能、リモートアクセス機能、
+        またはコンフィグ管理機能などのIoTシステム構築
+        時の課題を解決するための機能を備えており、様々
+        なマネージドサービスを活用して開発されています。
+        今回は、IoT Connect Gatewayに加えてeSIMアプレッ
+        トの機能を活用したモバイル関連データの連携の取
+        り組みに関してご紹介します。      
     - title: 調整中
       time: "16:15-16:45"
       type: スポンサーセッション      
@@ -168,9 +236,27 @@
         します。
     - title: 休憩
       time: "17:15-17:30"
-    - title: AIとネットワークエンジニアのパネル
+    - title: AIは、ネットワークエンジニアのタスクを代替できるのか？
       time: "17:30-18:30"
       type: パネル
+      tag: p_01
+      presenters:
+        - name_and_title: |-
+            チェア<br />
+            アレドノ合同会社　代表<br />
+            小野寺 好広<br />
+            スピーカー<br />
+            NTTコミュニケーションズ株式会社<br />
+            イノベーションセンター<br />
+            テクノロジー部門　主査<br />
+            小澤 暖<br />
+            NTTコミュニケーションズ株式会社<br />
+            イノベーションセンター<br />
+            テクノロジー部門/IOWN推進室　部長<br />
+            棚橋 弘幸
+          photo: Yukito-Ueno.jpg
+      abstract: |-
+
     - title: 閉会の挨拶
       time: "18:30-"
       presenters:
