make panel session more readable.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -242,10 +242,10 @@
       tag: p_01
       presenters:
         - name_and_title: |-
-            チェア<br />
+            （チェア）<br />
             アレドノ合同会社　代表<br />
-            小野寺 好広<br />
-            スピーカー<br />
+            小野寺 好広<br /><br />
+            （スピーカー）<br />
             NTTコミュニケーションズ株式会社<br />
             イノベーションセンター<br />
             テクノロジー部門　主査<br />
