more sponsor sessions added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -153,9 +153,26 @@
         ターネットが社会基盤になったが故に顕在化している問題も
         多い。講演ではこうした問題点について展望し、今後の在り
         方について考える。
-    - title: 調整中
+    - title: 6G時代のネットワーク・コンピューティングインフラ実現に向けた取り組み
       time: "13:30-14:00"
       type: スポンサーセッション
+      tag: sp_2
+      presenters:
+        - name_and_title: |-
+            富士通株式会社 富士通研究所<br />
+            先端技術開発本部 6Gインフラ戦略企画統括部<br />
+            アーキ＆インテグレーション部 </br />
+            深野 晴久
+          photo: Haruhisa_Fukano.jpg
+      abstract: |-
+        デジタルツインなどの６G時代の高度なサービス、アプリケー
+        ションを実現するために、ネットワーク・コンピューティン
+        グインフラは、伝送能力と処理能力の大幅な向上と低消費
+        電力化の両立という重大な課題に直面し、ブレイクスルーが
+        求められています。本講演では、我々の考える新しいネッ
+        トワーク・コンピューティングインフラのコンセプトや実現
+        に向けた取り組み、また、オープンコミュニティでの活動
+        について紹介いたします。
     - title: DNSの進化と研究開発での取り組みについて
       time: "14:00-14:30"
       type: スポンサーセッション
@@ -216,9 +233,21 @@
         今回は、IoT Connect Gatewayに加えてeSIMアプレッ
         トの機能を活用したモバイル関連データの連携の取
         り組みに関してご紹介します。      
-    - title: 調整中
+    - title: SONiC + ホワイトボックススイッチで実現するEVPN/VXLANロスレスイーサ
       time: "16:15-16:45"
-      type: スポンサーセッション      
+      type: スポンサーセッション
+      tag: sp_5
+      presenters:
+        - name_and_title: |-
+            APRESIA Systems株式会社<br />
+            大渕 光希
+          photo: obuhi.jpg
+      abstract: |-
+        近年注目されているAI技術の開発・利用のためにGPUクラスター
+        の需要が高まっており、データセンターにてロスレスイーサネ
+        ットを構築する取り組みが進んでいます。本講演では、SONiC
+        とホワイトボックススイッチにて構築したEVPN/VXLANネットワ
+        ークにてRoCEv2を検証した結果をご紹介します。
     - title: Interop Tokyo 2023 ShowNetのVPNベースバックボーン
       time: "16:45-17:15"
       type: 講演
