panel session abstract added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -286,7 +286,17 @@
             テクノロジー部門/IOWN推進室　部長<br />
             棚橋 弘幸
       abstract: |-
-
+        ネットワークエンジニアリングのフィールドは、BGPルー
+        ティングの最適化から、SD-WANの展開、セキュリティポ
+        リシーの適用、ネットワークの自動化、IoTデバイスの統
+        合に至るまで、広範で複雑なタスクに満ちています。こ
+        の多岐にわたるエコシステムにおいて、AIはどの程度、
+        エンジニアのタスクを補完または代替することができる
+        のでしょうか？このパネルディスカッションでは、ネット
+        ワークエンジニアリングの未来を形作るための洞察とビ
+        ジョンを共有します。AIとネットワークエンジニアが協働
+        する未来で、ネットワークの効率、セキュリティ、および
+        信頼性を最大化するためのディスカッションを行います。
     - title: 閉会の挨拶
       time: "18:30-"
       presenters:
