Kanaumi-san's BoF abstract added. Panel session title modified.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -69,7 +69,11 @@
             日本電気株式会社<br />
             金海 好彦
       abstract: |-
-        調整中
+        これまで箱庭で評価して(遊んで)いたコンテナ技術を，2023年4月
+        から仕事でも担当することになり，楽しみながら四苦八苦してい
+        ます。その状況(半分弱音？)を共有し，参加者の皆さんからアド
+        バイスをいただければと考えています。なお，コンテナの長所等々
+        の説明は割愛します。
     - title: 閉会
       time: "20:30"
 - date: November 10, 2023 (@メインホール)
@@ -267,7 +271,7 @@
         します。
     - title: 休憩
       time: "17:15-17:30"
-    - title: AIは、ネットワークエンジニアのタスクを代替できるのか？
+    - title: AIは、ネットワークエンジニアのタスクを代替できるのか？ ネットワークエンジニアリングの未来を探る！
       time: "17:30-18:30"
       type: パネル
       tag: p_01
