cisco sponsor session added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -104,12 +104,27 @@
         れているのでしょうか。 そして、そのパラダイムで本当に
         問題は解決されるのでしょうか。この講演では、Web3 を支
         えるとされる技術の現実を露わにします。
-    - title: 調整中
+    - title: SP Network as a Serviceに対するCiscoの取り組み
       time: "10:50-11:20"
       type: スポンサーセッション
+      tag: s_02
       presenters:
         - name_and_title: |-
-            Cisco Systems
+            Cisco Systems<br />
+            鎌田 徹平
+      abstract: |-
+        「Network as a Service」（NaaS）は、クラウドコンピュー
+        ティングの一種であり、ネットワークサービスを提供するモ
+        デルです。インターネットや他のネットワークを通じて、企
+        業や個々のユーザーがネットワークインフラストラクチャを
+        所有、管理、運用する必要なく、必要に応じてネットワーク
+        サービスを使用することができるようになります。しかし、
+        このコンセプトには、そもそもネットワークにつなぐインフ
+        ラが必要であることや、セキュリティ上の懸念、規制やコン
+        プライアンス上の問題、既存インフラへの投資など、いくつ
+        かのチャレンジがあります。本講演では、Underlay as a 
+        Platformの考え方や、NaaSにおいてSPが果たすべき役割など、
+        NaaSに対するシスコのアプローチについて紹介します。
     - title: コネクティッドカーとエッジコンピューティングによるグリーンモビリティへの挑戦
       time: "11:20-11:50"
       type: 講演
