Kanaumi-san's session title updated.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -60,7 +60,7 @@
         加開発(デバイスドライバ部分のAnsible連携、Kuesta
         が管理するデータとネットワークデバイスとの一貫
         性担保機能等)で得た知見について紹介をする。
-    - title: (仮)ネットワーク屋がコンテナ力を手に入れる最中の話
+    - title: ネットワーク屋がコンテナスキルを身につけたいと考えたとき
       time: "20:00"
       type: BoF
       tag: b_04
